--- a/index.css
+++ b/index.css
@@ -23,5 +23,12 @@ body {
     height: 100px;
     width: 200px;
     margin-left: 50px;
-    margin-top: 100px;
+    margin-top: 50px;
+}
+
+.controls {
+    height: 150px;
+    width: 200px;
+    margin-left:50px;
+    margin-top: 50px
 }
